syntax = "proto3";
package devashishdxt.cryptonft.compatnft;

import "gogoproto/gogo.proto";

option go_package = "github.com/devashishdxt/crypto-nft/x/compatnft/types";

message DenomMetadata {
    string schema = 1;
}

message NFTMetadata {
    string name = 1;
    string data = 2;
}

// IDCollection defines a type of collection with specified ID
message IDCollection {
    option (gogoproto.equal) = true;

    string denom_id = 1 [ (gogoproto.moretags) = "yaml:\"denom_id\"" ];
    repeated string token_ids = 2 [ (gogoproto.moretags) = "yaml:\"token_ids\"" ];
}

// Owner defines a type of owner
message Owner {
    option (gogoproto.equal) = true;

    string address = 1;
    repeated IDCollection id_collections = 2 [ (gogoproto.moretags) = "yaml:\"idcs\"", (gogoproto.customname) = "IDCollections", (gogoproto.nullable) = false ];
}

// BaseNFT defines a non-fungible token
message BaseNFT {
    option (gogoproto.equal) = true;

    string id = 1;
    string name = 2;
    string uri = 3 [ (gogoproto.customname) = "URI" ];
    string data = 4;
    string owner = 5;
}

// Denom defines a type of NFT
message Denom {
    option (gogoproto.equal) = true;

    string id = 1;
    string name = 2;
    string schema = 3;
    string creator = 4;
}

// Collection defines a type of collection
message Collection {
    option (gogoproto.equal) = true;

    Denom denom = 1 [ (gogoproto.nullable) = false ];
    repeated BaseNFT nfts = 2 [ (gogoproto.customname) = "NFTs", (gogoproto.nullable) = false ];
}
